resolvendo bugs visuais, ajustando rota na aws e configurando erros pra ficar na parte de cima